--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,26 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
+node_modules/
+/node_modules
+*/node_modules
+
+# Build files
+/build
+/dist
+
+# Misc
+.DS_Store
+.vscode/
+*.log
 
 node_modules
 dist
